K19 - FE Tests - Code Review - All Passed - 11.10.2024